# hashtable-latencies

./: README.md  programs.txt  test.sh
go/: build.sh  go.mod  go.sum  main.go  run.sh
haskell/: htlatencies.cabal  run.sh  stack.yaml
haskell/app/: Main.hs
node/: main.js  run.sh
ocaml-reason/: .merlin  Main.ml  Main.re  build.sh  run.sh
python-uwsgi/: build.sh  main.py  run.sh
reason/: .gitignore  Main.re  run.sh
reports/: 033-go.txt  033-haskell.txt  033-node.txt  033-reason.txt  033-swift-zewo.txt  333-go.txt  333-haskell.txt  333-node.txt  333-reason.txt  333-swift-zewo.txt  go  haskell  node  ocaml-reason  rust-actix  swift-zewo
rust-actix/: Cargo.toml  build.sh  run.sh
rust-actix/src/: main.rs
swift-zewo/: .gitignore  CMakeLists.txt  Package.swift  build.sh  run.sh
swift-zewo/Sources/: main.swift
