name:                htlatencies
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/htlatencies#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable htlatencies-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , hashtables
                     , bytestring
                     
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/htlatencies
